@@ -3,6 +3,8 @@
 #
 #  Copyright (C) 1995-2013 The R Core Team
 #
+# NB: also copyright dates in Usages.
+#
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
 #  the Free Software Foundation; either version 2 of the License, or
@@ -168,6 +170,7 @@
             "      --without-keep.source",
             "			use (or not) 'keep.source' for R code",
             "      --byte-compile	byte-compile R code",
+            "      --no-byte-compile	do not byte-compile R code",
             "      --no-test-load	skip test of loading installed package",
             "      --no-clean-on-error	do not remove installed package on error",
             "      --merge-multiarch	multi-arch by merging (from a single tarball only)",
@@ -1051,8 +1054,9 @@
 
 	## LazyLoading/Compiling
 	if (install_R && dir.exists("R") && length(dir("R"))) {
-            BC <- parse_description_field(desc, "ByteCompile",
-                                          default = byte_compile)
+            BC <- if (!is.na(byte_compile)) byte_compile
+            else
+                parse_description_field(desc, "ByteCompile", default = FALSE)
             rcp <- as.numeric(Sys.getenv("R_COMPILE_PKGS"))
             BC <- BC || (!is.na(rcp) && rcp > 0)
             if (BC) {
@@ -1213,8 +1217,8 @@
     fake <- FALSE
     lazy <- TRUE
     lazy_data <- FALSE
-    byte_compile <- FALSE
-    ## This is not very useful unless R CMD INSTALL reads a startup file
+    byte_compile <- NA # means take from DESCRIPTION file.
+    ## Next is not very useful unless R CMD INSTALL reads a startup file
     lock <- getOption("install.lock", NA) # set for overall or per-package
     pkglock <- FALSE  # set for per-package locking
     libs_only <- FALSE
@@ -1226,8 +1230,6 @@
     test_load <- TRUE
     merge <- FALSE
     dsym <- nzchar(Sys.getenv("PKG_MAKE_DSYM"))
-    ## group.writable <- getOption("group.writable.pkgs",FALSE) ||
-    ##     	       nzchar(Sys.getenv("R_PKG_GROUP_WRITABLE"))
     get_user_libPaths <- FALSE
     data_compress <- TRUE # FALSE (none), TRUE (gzip), 2 (bzip2), 3 (xz)
     resave_data <- FALSE
@@ -1254,7 +1256,7 @@
                 R.version[["major"]], ".",  R.version[["minor"]],
                 " (r", R.version[["svn rev"]], ")\n", sep = "")
             cat("",
-                "Copyright (C) 2000-2010 The R Core Team.",
+                "Copyright (C) 2000-2013 The R Core Team.",
                 "This is free software; see the GNU General Public License version 2",
                 "or later for copying conditions.  There is NO warranty.",
                 sep = "\n")
@@ -1356,10 +1358,10 @@
             keep.source <- FALSE
         } else if (a == "--byte-compile") {
             byte_compile <- TRUE
+        } else if (a == "--no-byte-compile") {
+            byte_compile <- FALSE
         } else if (a == "--dsym") {
             dsym <- TRUE
-        ## } else if (a == "--group-writable") {
-        ##     group.writable <- TRUE
         } else if (substr(a, 1, 1) == "-") {
             message("Warning: unknown option ", sQuote(a), domain = NA)
         } else pkgs <- c(pkgs, a)
@@ -1703,7 +1705,7 @@
                 R.version[["major"]], ".",  R.version[["minor"]],
                 " (r", R.version[["svn rev"]], ")\n", sep = "")
             cat("",
-                "Copyright (C) 2000-2011 The R Core Team.",
+                "Copyright (C) 2000-2013 The R Core Team.",
                 "This is free software; see the GNU General Public License version 2",
                 "or later for copying conditions.  There is NO warranty.",
                 sep = "\n")
